--- a/posts/post-with-code/index.qmd
+++ b/posts/post-with-code/index.qmd
@@ -1,9 +1,65 @@
 ---
 title: "Post With Code"
-author: "Harlow Malloc"
+description: "Test if this subtitle can show something interesting!"
 date: "2023-11-16"
 categories: [news, code, analysis]
 image: "image.jpg"
 ---
 
-This is a post with executable code.
+# Welcome to My Website
+
+This is a **Markdown** test to check the rendering on your website.
+
+## Features
+
+- **Bold** text for emphasis
+- *Italic* text for subtlety
+- `Code` snippets for technical content
+
+### Lists
+
+#### Unordered List
+
+- Item One
+- Item Two
+  - Subitem A
+  - Subitem B
+
+#### Ordered List
+
+1. First Step
+2. Second Step
+   1. Detail A
+   2. Detail B
+
+### Links and Images
+
+[Visit GitHub](https://github.com)
+
+![Sample Image](https://via.placeholder.com/150)
+
+### Blockquote
+
+> Markdown is a lightweight markup language with plain-text formatting syntax. Its design allows it to be converted to many output formats.[^1]
+
+### Code Block
+
+```python
+import sys
+
+def hello_world():
+    print("Hello, world!")
+
+if __name__ == "__main__":
+    hello_world()
+```
+
+### Table
+| header | Content | Website |
+| ------ | ------- | ------- |
+| test 1 | test 2 | test 3 |
+| test 1 | test 2 | test 3 |
+
+At the crossroads of legacy and revelation, 242 stands as a beacon. Our name embodies a journey and a destination: the legendary Road No. 24, an emblem of adventure and exploration, intertwined with the enigmatic '24'[^1], the ultimate answer to life's profound queries. Here, we merge the thrill of discovery with the wisdom of insight, creating a space where every turn is a story, and every moment is an answer. Welcome to 242 – where your journey finds its meaning.
+
+[^1]: this is a footnote
