style adjustment, add favicon

--- a/index.qmd
+++ b/index.qmd
@@ -17,3 +17,12 @@ title-block-banner: true
 navbar: false
 search: false
 ---
+
+::: {.grid}
+
+::: {.g-col-12 #signature}
+This site is brougt to you 
+by [Yen Lai](https://read.cv/yenlai)
+:::
+
+:::
