--- a/index.qmd
+++ b/index.qmd
@@ -14,6 +14,7 @@ listing:
   fields: [date, title, reading-time]
 page-layout: full
 title-block-banner: true
+page-footer: false
 navbar: false
 search: false
 ---
